cli/hypercode-rs/tui/src/chatwidget/snapshots/hypercode_tui__chatwidget__tests__mcp_startup_header_booting.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Booting MCP server: alpha (0s • esc to interrupt)                             "
"                                                                                "
"                                                                                "
"› Ask Hypercode to do anything                                                      "
"                                                                                "
"  100% context left · ? for shortcuts                                           "
