cli/hypercode-rs/tui/src/chatwidget/snapshots/hypercode_tui__chatwidget__tests__model_picker_filters_hidden_models.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 1989
expression: popup
---
  Select Model and Effort
  Access legacy models by running hypercode -m <model_name> or in your config.toml

› 1. test-visible-model (current)  test-visible-model description

  Press enter to select reasoning effort, or esc to dismiss.
