cli/hypercode-rs/tui/src/chatwidget/snapshots/hypercode_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Select Model and Effort
  Access legacy models by running hypercode -m <model_name> or in your config.toml

› 1. gpt-5.2-codex (default)  Latest frontier agentic coding model.
  2. gpt-5.1-codex-max        Hypercode-optimized flagship for deep and fast
                              reasoning.
  3. gpt-5.1-codex-mini       Optimized for hypercode. Cheaper, faster, but less
                              capable.
  4. gpt-5.2                  Latest frontier model with improvements across
                              knowledge, reasoning and coding

  Press enter to select reasoning effort, or esc to dismiss.
